--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^3.2.26"
+    "@types/node": ">= 14",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "less": "^4.1.3",
+    "postcss": "^8.3.3",
+    "sass": "^1.56.1",
+    "stylus": "^0.59.0",
+    "sugarss": "^4.0.1",
+    "terser": "^5.4.0",
+    "vite": "^3.2.4",
+    "vue": "^3.2.45"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.0",
